--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
   </main>
   <footer>
-    <p><small>&copy; 2021 mikuro.net</small></p>
+    <p><small>&copy; 2021 mikuro.net, mikuro.works</small></p>
   </footer>
 </body>
 </html>
