HELPに「学歴・職歴」、「免許・資格」記載欄の揃えを変更する　を追加

--- a/help.html
+++ b/help.html
@@ -72,6 +72,13 @@
       <div class="commentary-image animation">
         <img src="img/input-1.png" alt="入力">
       </div>
+
+      <h3>「学歴・職歴」、「免許・資格」記載欄の揃えを変更する</h3>
+      <p>「学歴・職歴」、「免許・資格」記載欄をダブルクリックすることで、中央揃え→右揃え→左揃え、と切り替わります。</p>
+      <p>学歴などのタイトルや、以上などの文言を記載するときに利用して下さい。</p>
+      <div class="commentary-image animation">
+        <img src="img/align-1.png" alt="「学歴・職歴」、「免許・資格」記載欄の揃えを切り替える">
+      </div>
     </div><!-- /.description -->
   </section><!-- /#input -->
 
