hamburger menu add

--- a/help.html
+++ b/help.html
@@ -240,7 +240,7 @@
       <p>画面右上のHTML出力ボタンを押下し、履歴書をHTML形式で出力します。</p>
       <p>リモートでの面談等が多くなった昨今、ご活用ください。</p>
       <div class="commentary-image animation">
-        <img src="img/ouput-2.png" alt="HTML形式で出力する">
+        <img src="img/output-2.png" alt="HTML形式で出力する">
       </div>
 
     </div><!-- /.description -->
