--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <h1>履歴書 Editor</h1>
       <p>ブラウザで経歴書を作成します。</p>  
     </div>
+    <input type="checkbox" id="is-menu-show">
+    <label for="is-menu-show" class="menu-button"></label>
     <div class="menu">
       <div class="editing-switch">
         <input id="isEditing" type="checkbox">
