--- a/commentary/index.html
+++ b/commentary/index.html
@@ -36,7 +36,7 @@
         <li><a href="#">Top</a></li>
         <li><a href="#overview">概要</a></li>
         <li><a href="#discription">作業内容</a></li>
-        <li><a href="#request-details">依頼内容</a></li>
+        <!-- <li><a href="#request-details">依頼内容</a></li> -->
         <li><a href="#specification">仕様</a></li>
         <li><a href="#features">特徴</a></li>
         <li><a href="#difficulties">苦労した点</a></li>
