「連絡先」が2カ所にあったため、1カ所を「現住所」に修正

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <p id="resides-furigana" class="input-field"></p>
             </div>
             <div class="postal-code">
-              <p class="label">連絡先</p>
+              <p class="label">現住所</p>
               <p class="label">（〒</p>
               <p id="postal-code-first3" class="input-field"></p>
               <p class="label">ー</p>
